[package]
name = "minecraft_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]

mcping = { git = "https://github.com/Scetch/mcping.git", features = ["tokio-runtime"] }
influxdb2 = "0.3.0"

async-trait = "0.1.57"

tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = "0.1.9"

tokio-cron-scheduler = "0.8.0"
chrono = "0.4.22"
