[package]
name = "minecraft_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]

mcping = { git = "https://github.com/Scetch/mcping.git", features = ["tokio-runtime"] }

influxdb2 = { version = "0.3.3", features = ["rustls"], default-features = false }
influxdb2-structmap = "0.2"
num-traits = "0.2"

async-trait = "0.1.58"

tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.11"

tokio-cron-scheduler = "0.8.1"
chrono = "0.4.23"
